--- a/app/src/main/res/layout/list_merchant_tutup.xml
+++ b/app/src/main/res/layout/list_merchant_tutup.xml
@@ -33,28 +33,35 @@
         android:layout_centerVertical="true">
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:text=""
+            android:id="@+id/tv_date"
+            android:textSize="@dimen/text_small"
+            android:gravity="right"/>
+
+        <TextView
             android:id="@+id/txt_merchant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nama"
             android:textColor="#000000"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:fontFamily="sans-serif-black" />
+            android:textSize="@dimen/text_big"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txt_alamat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:text="@string/alamat"
             android:textColor="#000000"
-            android:textSize="20sp" />
+            android:textSize="@dimen/text_mid" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:id="@+id/ll_alasan"
             android:orientation="horizontal">
 
             <TextView
@@ -62,21 +69,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.001"
-                android:layout_marginTop="5dp"
                 android:text="Alasan: "
                 android:textColor="#000000"
-                android:textSize="20sp" />
+                android:textSize="@dimen/text_mid" />
 
             <TextView
                 android:id="@+id/txt_alasan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginTop="5dp"
                 android:text="Gulung Tikar"
                 android:maxLines="10"
                 android:textColor="#000000"
-                android:textSize="20sp" />
+                android:textSize="@dimen/text_mid" />
 
         </LinearLayout>
 
