--- a/app/src/main/res/layout/popup_merchant_lokasi.xml
+++ b/app/src/main/res/layout/popup_merchant_lokasi.xml
@@ -58,67 +58,84 @@
                     android:textSize="@dimen/text_mid"
                     android:textStyle="normal" />
 
-                <TextView
-                    android:id="@+id/text"
+                <RelativeLayout
+                    android:id="@+id/relstive2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginEnd="30dp"
-                    android:textColor="@color/black"
-                    android:text="@string/text_tutup"
-                    android:textSize="@dimen/text_mid" />
+                    android:layout_marginTop="10dp">
 
-                <EditText
-                    android:id="@+id/edt_keteranganTutup"
+                    <TextView
+                        android:id="@+id/lbl_map"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/padding_big"
+                        android:layout_marginRight="@dimen/padding_big"
+                        android:layout_marginBottom="@dimen/padding_big"
+                        android:text="Lokasi saat ini"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/text_big"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/btnreset"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/resetlokasi"
+                        android:textAllCaps="false"
+                        android:textSize="10sp"
+                        android:gravity="center"
+                        android:layout_alignBottom="@id/mv_peta"
+                        android:layout_alignEnd="@id/mv_peta"
+                        android:layout_margin="10dp"
+                        />
+
+                    <com.google.android.gms.maps.MapView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:id="@+id/mv_peta"
+                        android:layout_below="@id/lbl_map"></com.google.android.gms.maps.MapView>
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:id="@+id/linear2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginEnd="30dp"
-                    android:gravity="top|start"
-                    android:hint="@string/hint_Tutup"
-                    android:lines="7"
-                    android:textSize="@dimen/text_mid"
-                    android:theme="@style/RadioGroupStyle" />
-
-                <TextView
-                    android:id="@+id/lbl_foto"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/padding_big"
-                    android:layout_marginTop="@dimen/padding_big"
-                    android:layout_marginRight="@dimen/padding_big"
-                    android:text="Upload Foto"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_big"/>
-
-                <TextView
-                    android:id="@+id/txt_foto"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/padding_big"
-                    android:layout_marginRight="@dimen/padding_big"
-                    android:text="@string/icon_camera"
-                    android:textSize="@dimen/text_medium" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_margin="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:background="@drawable/bacgroundgradien"
+                    android:padding="15dp"
                     android:orientation="horizontal">
 
-                </androidx.recyclerview.widget.RecyclerView>
+                    <TextView
+                        android:id="@+id/textLatitude"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        android:ellipsize="end"
+                        android:layout_marginEnd="5dp" />
+
+                    <TextView
+                        android:id="@+id/textLongitude"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:layout_marginStart="5dp"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        android:ellipsize="end"/>
+
+                </LinearLayout>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/CardTutupMerchant"
+                    android:id="@+id/cv_simpan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     app:cardCornerRadius="@dimen/default_corner"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="@dimen/padding_super"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="20dp">
@@ -135,7 +152,7 @@
                             android:gravity="center"
                             android:layout_margin="@dimen/padding_default"
                             android:textColor="@color/white"
-                            android:text="Ya, merchant telah berhenti beroperasi"
+                            android:text="Simpan Lokasi"
                             android:textSize="@dimen/padding_big" />
 
                     </LinearLayout>
