--- a/app/src/main/res/layout/activity_merchant_tutup.xml
+++ b/app/src/main/res/layout/activity_merchant_tutup.xml
@@ -27,7 +27,7 @@
         android:imeOptions="actionSearch"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:hint="Cari Nama Merchant"
+        android:hint="Cari Nama Wajib Pajak"
         android:padding="10dp"
         android:textSize="@dimen/text_big" />
 
