--- a/app/src/main/res/layout/activity_daftar_merchants.xml
+++ b/app/src/main/res/layout/activity_daftar_merchants.xml
@@ -40,7 +40,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Merchant Sekitar"
+                android:text="Wajib Pajak Sekitar"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/text_big"
@@ -72,7 +72,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Merchant Tutup"
+                android:text="Wajib Pajak Tutup"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/text_big"
@@ -104,7 +104,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ubah Lokasi Merchant"
+                android:text="Ubah Lokasi Wajib Pajak"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/text_big"
