--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -249,7 +249,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Merchants"
+                                    android:text="Wajib Pajak"
                                     android:fontFamily="@font/cantarell"
                                     android:layout_marginTop="@dimen/padding_default"
                                     android:gravity="center"
