--- a/app/src/main/res/layout/activity_merchant_sekitar.xml
+++ b/app/src/main/res/layout/activity_merchant_sekitar.xml
@@ -71,7 +71,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Merchant Terdekat"
+            android:text="Wajib Pajak Terdekat"
             android:layout_marginTop="@dimen/text_big"
             android:textAllCaps="true"
             android:layout_gravity="center_horizontal"
