--- a/app/src/main/res/layout/activity_merchant_untuk_penugasan.xml
+++ b/app/src/main/res/layout/activity_merchant_untuk_penugasan.xml
@@ -36,7 +36,7 @@
         android:gravity="center_horizontal"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:hint="Cari Nama Merchant"
+        android:hint="Cari Nama Wajib Pajak"
         android:padding="10dp"
         android:textSize="18sp" />
 
