--- a/app/src/main/res/layout/activity_daftar_merchants.xml
+++ b/app/src/main/res/layout/activity_daftar_merchants.xml
@@ -104,7 +104,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ubah Lokasi Wajib Pajak"
+                android:text="Update Wajib Pajak"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/text_big"
