--- a/app/src/main/res/layout/activity_merchant_sekitar.xml
+++ b/app/src/main/res/layout/activity_merchant_sekitar.xml
@@ -59,33 +59,40 @@
         android:orientation="vertical">
         <!--TOP;LIST MERCHANT-->
 
-        <View
-            android:id="@+id/layout_divider1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/line"
-            android:background="#E1E1E1"
-            android:layout_marginTop="@dimen/padding_big"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wajib Pajak Terdekat"
-            android:layout_marginTop="@dimen/text_big"
-            android:textAllCaps="true"
-            android:layout_gravity="center_horizontal"
-            android:textSize="@dimen/text_big"
-            android:textColor="#333"/>
+            android:orientation="vertical">
 
-        <View
-            android:id="@+id/layout_divider2"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line"
-            android:background="#E1E1E1"
-            android:layout_marginTop="@dimen/padding_big"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"/>
+            <View
+                android:id="@+id/layout_divider1"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/line"
+                android:background="#E1E1E1"
+                android:layout_marginTop="@dimen/padding_medium"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"/>
+
+            <SearchView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sv_wp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:searchIcon="@drawable/ic_search_black_24dp"
+                android:tooltipText="Cari Wajib Pajak"
+                android:queryHint="Cari Wajib Pajak"
+                android:autofillHints="Cari Wajib Pajak"/>
+
+            <View
+                android:id="@+id/layout_divider2"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/line"
+                android:background="#E1E1E1"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"/>
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_merchantkategori"
@@ -103,6 +110,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
+            android:nestedScrollingEnabled="true"
             android:scrollbars="vertical">
         </ListView>
 
