--- a/app/src/main/res/layout/adapter_notification.xml
+++ b/app/src/main/res/layout/adapter_notification.xml
@@ -7,11 +7,12 @@
     android:layout_marginBottom="@dimen/padding_default"
     android:layout_marginLeft="@dimen/padding_default"
     android:layout_marginRight="@dimen/padding_default"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:id="@+id/rv_container">
 
     <RelativeLayout
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:id="@+id/rl_icon">
 
         <androidx.cardview.widget.CardView
@@ -69,6 +70,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="Keterangan"
+            android:visibility="gone"
             android:id="@+id/tv_item4"
             android:textSize="@dimen/text_medium"/>
 
