--- a/app/src/main/res/layout/list_daftar_merchant.xml
+++ b/app/src/main/res/layout/list_daftar_merchant.xml
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_mid"
             android:textStyle="bold"
             app:fontFamily="sans-serif-black" />
 
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textColor="#000000"
-            android:textSize="20sp" />
+            android:textSize="@dimen/text_small" />
 
     </LinearLayout>
 
