--- a/app/src/main/res/layout/popup_merchant_lokasi.xml
+++ b/app/src/main/res/layout/popup_merchant_lokasi.xml
@@ -58,6 +58,36 @@
                     android:textSize="@dimen/text_mid"
                     android:textStyle="normal" />
 
+                <TextView
+                    android:id="@+id/lbl_foto"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/padding_big"
+                    android:layout_marginTop="@dimen/padding_big"
+                    android:layout_marginRight="@dimen/padding_big"
+                    android:text="Upload Foto"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/text_big"/>
+
+                <TextView
+                    android:id="@+id/txt_foto"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/padding_big"
+                    android:layout_marginRight="@dimen/padding_big"
+                    android:text="@string/icon_camera"
+                    android:textSize="@dimen/text_medium" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_margin="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:orientation="horizontal">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
                 <RelativeLayout
                     android:id="@+id/relstive2"
                     android:layout_width="match_parent"
