--- a/app/src/main/res/layout/list_daftar.xml
+++ b/app/src/main/res/layout/list_daftar.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:textColor="#000000"
             android:textSize="16sp"
-            android:textStyle="bold"
+            android:gravity="center"
             app:fontFamily="sans-serif-black" />
 
         <TextView
@@ -50,20 +50,43 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#000000"
+            android:gravity="center"
             android:textSize="13sp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:background="@color/grey"
+            android:layout_marginTop="@dimen/padding_small"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:layout_marginTop="@dimen/padding_small"
+            android:textSize="10sp"
+            android:text="Tanggal Putusan"/>
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:gravity="right"
+            android:textSize="13sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:layout_marginTop="@dimen/padding_small"
+            android:textSize="10sp"
+            android:text="Status terdaftar"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/padding_small">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_mid"
-                android:text="Status terdaftar : "/>
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txt_status"
@@ -71,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="#45E745"
                 android:text=""
+                android:gravity="right"
                 android:textSize="@dimen/text_mid" />
 
             <TextView
@@ -78,6 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#CA0000"
+                android:gravity="right"
                 android:textSize="@dimen/text_mid" />
 
         </LinearLayout>
