--- a/app/src/main/res/layout/activity_list_view_survey.xml
+++ b/app/src/main/res/layout/activity_list_view_survey.xml
@@ -32,8 +32,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="@dimen/padding_dexa"
-        android:layout_toEndOf="@id/layout_survey"
-        android:layout_centerVertical="true">
+        android:layout_toEndOf="@id/layout_survey">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Status Pendaftaran"
+            android:gravity="right"
+            android:layout_marginTop="@dimen/padding_tiny"
+            android:id="@+id/tv_status"
+            android:textSize="8sp"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/txt_merchant"
@@ -51,15 +60,6 @@
             android:textColor="#000000"
             android:textSize="@dimen/text_small"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Status Pendaftaran"
-            android:gravity="right"
-            android:layout_marginTop="@dimen/padding_tiny"
-            android:id="@+id/tv_status"
-            android:textSize="@dimen/text_medium"
-            android:textColor="@color/black"/>
 
     </LinearLayout>
 
